After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 756859 - common: Fix a compiler warning
common: Fix a compiler warning
Status: RESOLVED FIXED
Product: gnome-settings-daemon
Classification: Core
Component: general
unspecified
Other Linux
: Normal normal
: ---
Assigned To: gnome-settings-daemon-maint
gnome-settings-daemon-maint
Depends on:
Blocks:
 
 
Reported: 2015-10-20 11:30 UTC by Kalev Lember
Modified: 2015-10-20 11:43 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
common: Fix a compiler warning (1.13 KB, patch)
2015-10-20 11:30 UTC, Kalev Lember
committed Details | Review

Description Kalev Lember 2015-10-20 11:30:26 UTC
gsd-input-helper.c: In function ‘trackball_is_present’:
gsd-input-helper.c:256:18: warning: ‘retval’ may be used uninitialized in this function [-Wmaybe-uninitialized]
Comment 1 Kalev Lember 2015-10-20 11:30:48 UTC
Created attachment 313735 [details] [review]
common: Fix a compiler warning

gsd-input-helper.c: In function ‘trackball_is_present’:
gsd-input-helper.c:256:18: warning: ‘retval’ may be used uninitialized in this function [-Wmaybe-uninitialized]
Comment 2 Bastien Nocera 2015-10-20 11:31:40 UTC
Review of attachment 313735 [details] [review]:

Sure.
Comment 3 Kalev Lember 2015-10-20 11:43:33 UTC
Attachment 313735 [details] pushed as 753c48a - common: Fix a compiler warning