common: Fix a compiler warning

gsd-input-helper.c: In function ‘trackball_is_present’:
gsd-input-helper.c:256:18: warning: ‘retval’ may be used uninitialized in this function [-Wmaybe-uninitialized]

https://bugzilla.gnome.org/show_bug.cgi?id=756859